--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
       <dependencies>
@@ -23,6 +24,7 @@
               </dependency>
           </dependencies>
           <build>
+              <finalName>${project.artifactId}</finalName>
               <plugins>
                   <plugin>
                       <artifactId>maven-compiler-plugin</artifactId>
